force-app/main/default/objects/Match__c/fields/Map__c.field-meta.xml
<CustomField>
    <fullName>Map__c</fullName>
    <label>Map</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>11</fullName>
                <label>Summoner&#39;s Rift</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>