force-app/main/default/objects/Match__c/fields/Mode__c.field-meta.xml
<CustomField>
    <fullName>Mode__c</fullName>
    <label>Mode</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CLASSIC</fullName>
                <label>Classic Summoner's Rift</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>