force-app/main/default/objects/Match__c/fields/Platform__c.field-meta.xml
<CustomField>
    <fullName>Platform__c</fullName>
    <label>Platform</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>EUW1</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>