force-app/main/default/objects/Match__c/fields/Queue__c.field-meta.xml
<CustomField>
    <fullName>Queue__c</fullName>
    <label>Queue</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>420</fullName>
                <default>true</default>
                <label>5v5 Ranked Solo games</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>