force-app/main/default/objects/Match__c/fields/Red_Team__c.field-meta.xml
<CustomField>
    <fullName>Red_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Red Team</label>
    <referenceTo>Team__c</referenceTo>
    <relationshipLabel>Matches (Red Team)</relationshipLabel>
    <relationshipName>Matches1</relationshipName>
    <type>Lookup</type>
</CustomField>