force-app/main/default/objects/Match__c/fields/Season__c.field-meta.xml
<CustomField>
    <fullName>Season__c</fullName>
    <label>Season</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
                <label>PRESEASON 3</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>SEASON 3</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>PRESEASON 2014</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>SEASON 2014</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>PRESEASON 2015</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>SEASON 2015</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>PRESEASON 2016</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>SEASON 2016</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>PRESEASON 2017</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>SEASON 2017</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>PRESEASON 2018</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>SEASON 2018</label>
            </value>
            <value>
                <fullName>12</fullName>
                <label>PRESEASON 2019</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>SEASON 2019</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>