force-app/main/default/objects/Match__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Game Started</fullName>
            </value>
            <value>
                <fullName>Game Finished</fullName>
            </value>
            <value>
                <fullName>Waiting</fullName>
            </value>
            <value>
                <fullName>In Review</fullName>
            </value>
            <value>
                <fullName>Reviewed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>