force-app/main/default/objects/Match__c/fields/Version__c.field-meta.xml
<CustomField>
    <fullName>Version__c</fullName>
    <label>Version</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>9.17.287.2485</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>